--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -1,69 +1,1 @@
-<div
-  class="bg"
-  style="
-    background-image: url('images/welcome2.jpg');
-    background-size: cover;
-    background-position: center;
-    height: 100vh;
-  "
->
-  <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-md-8 col-lg-6">
-        <div class="text-center mb-4">
-          <h2 class="fw-bold text-white">Please log in</h2>
-        </div>
-
-        <div>
-          <form (submit)="onLogIn(); $event.preventDefault()">
-            <div class="form-floating mb-3">
-              <input
-                class="form-control"
-                id="floatingUser"
-                [field]="loginForm.name"
-                type="text"
-                placeholder="Enter name"
-              />
-              @if((loginForm.name().touched() && loginForm.name().dirty()) &&
-              loginForm.name().invalid()) { @for(error of loginForm.name().errors(); track $index){
-              <div class="invalid-feedback d-block">
-                {{ error.message }}
-              </div>
-              } }
-              <label for="floatingUser">Username:</label>
-            </div>
-            <div class="form-floating mb-3">
-              <input
-                class="form-control"
-                id="floatingPassword"
-                [field]="loginForm.password"
-                type="password"
-                placeholder="Enter password"
-              />
-              @if((loginForm.password().touched() && loginForm.password().dirty()) &&
-              loginForm.password().invalid()) { @for(error of loginForm.password().errors(); track
-              $index){
-              <div class="invalid-feedback d-block">
-                {{ error.message }}
-              </div>
-              } }
-              <label for="floatingPassword"> Password:</label>
-            </div>
-            <div class="d-grid gap-2">
-              <button class="btn btn-primary" type="submit" [disabled]="!loginForm().valid()">
-                Let's play!
-              </button>
-
-              @if(!loginForm().valid() && loginForm.name().touched() &&
-              loginForm.password().touched()) {
-              <small class="text-danger text-center">
-                Please fix the errors above before submitting!
-              </small>
-              }
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+<p>login works!</p>
