--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,1 +1,51 @@
-<p>main works</p>
+<div
+  class="bg"
+  style="
+    background-image: url('images/login2.jpg');
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+  "
+>
+  <div class="container-fluid mt-4">
+    <h2>Pievienot jaunu pasākumu</h2>
+    <form>
+      @for(pasakums of pasakumaSignals().pasakumaArrays; track $index; let i = $index) {
+      console.log(pasakums);
+      <div class="mb-3">
+        <label class="form-label">Pasākuma nosaukums</label>
+        <input type="text" id="pasakumaNosaukums-{{ i }}" class="form-control" />
+      </div>
+
+      <div class="mb-3">
+        <label class="form-label">Pasākuma apraksts</label>
+        <textarea class="form-control" rows="3"> </textarea>
+      </div>
+
+      <div class="mb-3">
+        <label class="form-label">Pasākuma datums</label>
+        <input type="date" class="form-control" />
+      </div>
+
+      <div class="mb-3">
+        <label class="form-label">Pasākuma laiks</label>
+        <input type="time" class="form-control" />
+      </div>
+
+      <div class="mb-3">
+        <label class="form-label">Pasākuma atrasšanās vieta</label>
+        <input type="text" class="form-control" />
+      </div>
+
+      <div class="mb-3">
+        <label class="form-label">Maksimālais dalībnieku skaits</label>
+        <input type="number" class="form-control" />
+      </div>
+
+      <button type="button" class="btn btn-primary" (click)="pievienotPasakumu()">
+        Pievienot pasākumu
+      </button>
+      }
+    </form>
+  </div>
+</div>
