--- a/src/app/mani-pasakumi/mani-pasakumi.html
+++ b/src/app/mani-pasakumi/mani-pasakumi.html
@@ -9,13 +9,13 @@
 >
   <form>
     <div class="container-fluid mt-4">
-      @if (pasakumi().length > 0) {
+      @if (pasakumiSignals().pasakumaArrays.length > 0) {
       <div class="row">
         <div class="col-12">
           <h3>Pasākumu saraksts</h3>
         </div>
       </div>
-      @for(pasakums of pasakumi(); track pasakums.id) {
+      @for(pasakums of pasakumiSignals().pasakumaArrays; track pasakums.id) {
       <div class="row g-1 flex-nowrap mb-3 border-bottom pb-2">
         <div class="col">
           <label class="form-label small fw-bold">Pasākuma nosaukums:</label>
@@ -43,10 +43,10 @@
         </div>
       </div>
       } } @else {
-      <div class="alert alert-info" role="alert">Nav izveidots neviens pasākums.</div>
+      <div class="alert alert-info" role="alert">Jūs neesat pieteicies nevienam pasākumam.</div>
       <div>
         <button class="btn btn-outline-dark p-0" type="button" (click)="navigateToMain()">
-          Izveidot pasākumu
+          Pieteikties pasākumam
         </button>
       </div>
       }
