--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -1,33 +1,1 @@
-<div
-  class="bg"
-  style="
-    background-image: url('images/login2.jpg');
-    background-size: cover;
-    background-position: center;
-    height: 100vh;
-  "
->
-  <br />
-  <div class="container-fluid">
-    <h2>Pasākuma plāns</h2>
-  </div>
-  <br />
-  <button class="btn btn-outline-dark p-0" type="button" (click)="navigateToManiPasakumi()">
-    Mani pasākumi
-  </button>
-  <br />
-  <br />
-  <button class="btn btn-outline-dark p-0" type="button" (click)="navigateToMain()">
-    Pieteikties pasākumam
-  </button>
-  <br />
-  <br />
-  <button class="btn btn-outline-dark p-0" type="button" (click)="navigateToMain()">
-    Izveidot pasākumu
-  </button>
-  <br />
-  <br />
-  <button class="btn btn-outline-dark p-0" type="button" (click)="navigateToManiPasakumi()">
-    Dzēst pieteikumu pasākumam
-  </button>
-</div>
+<!-- Header component - no longer used as standalone page -->
